# Chess-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chess.hpp  chess_neural_network.cpp  chess_neural_network.h  chess_position_encoding.cpp  chess_position_encoding.h  cmake_install.cmake  engine.cpp  main  main.cpp  search.cpp
.cache/clangd/index/: chess_neural_network.cpp.C953D0610B1F0AB0.idx  chess_neural_network.h.AB997E99E5A1BCFD.idx  chess_position_encoding.cpp.D84BDAD004A72E1E.idx  chess_position_encoding.h.D81531EC16B538D7.idx  main.cpp.0A50B8D522D6B5D8.idx
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
